# CrowdSOL

./: Anchor.toml  README.md  package.json
.github/workflows/: rust-clippy.yml
programs/fundraise/: Cargo.toml
programs/fundraise/src/: lib.rs
programs/fundraise_platform/: Cargo.toml
programs/fundraise_platform/src/: lib.rs
tests/: fundraise.ts  fundraise_platform.ts
